scss/_patterns_subnav.scss
@import 'settings';

@mixin vf-p-subnav {
  $color-navigation-background: $color-x-light !default;

  .p-subnav {
    position: relative;

    &::after {
      @include vf-icon-chevron;

      background-position: center;
      background-repeat: no-repeat;
      background-size: contain;
      content: '';
      display: block;
      height: $spv-inner--large;
      pointer-events: none;
      position: absolute;
      right: $sph-inner;
      text-indent: calc(100% + 10rem);
      top: $spv-inner--large;
      width: $sph-inner;
    }

    &.is-active {
      &::after {
        transform: rotate(180deg);
      }

      .p-subnav__items {
        display: block;
      }
    }

    // XXX: Fix required because of greedy rule in p-navigation
    // Can be updated with resolution of:
    // https://github.com/canonical-web-and-design/vanilla-framework/issues/2168
    > a {
      padding-right: $sph-inner--x-large;
    }
  }

  .p-subnav__items {
    @extend %vf-is-bordered;
    @extend %vf-has-box-shadow;
    @extend %vf-has-round-corners;
    display: none;
    margin: 0;
    padding: 0;
    z-index: 5;

    @media (min-width: $breakpoint-navigation-threshold + 1) {
      clip: rect(0, 1000px, 1000px, -10px); /* Clip the top of the box-shadow off */
      position: absolute;
      top: calc(#{$spv-inner--medium * 4} - 1px);
    }

    @media (max-width: $breakpoint-navigation-threshold) {
      border: 0;
      box-shadow: none;
    }
  }

  .p-subnav__item {
    background-color: $color-navigation-background;
    display: block;
    padding: $spv-inner--medium $grid-margin-width;
    white-space: nowrap;
  }
}

